--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,2 @@
 spring.application.name=weather-api
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.cache.type=redis
-spring.devtools.restart.exclude=**/dto/**,**/model/**
+spring.profiles.active=dev
