--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 spring.application.name=weather-api
 spring.profiles.active=dev
+
+# Exceptions
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
+# Redis (para desarrollo)
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.type=redis
+
+# Base URL
+weather.api.baseURL=https://weather.visualcrossing.com/VisualCrossingWebServices/rest/services/timeline/
